@@ -96,7 +96,7 @@ WARN = -Wchar-subscripts -Wformat -Wno-format-y2k -Wimplicit \
 	-Wmissing-braces -Wsequence-point -Wreturn-type -Wtrigraphs \
 	-Wunused-function -Wunused-label -Wunused-variable -Wunused-value \
 	-Wuninitialized -Wmultichar -Wpointer-arith -Wno-missing-braces \
-	$(WERROR)
+	-Wdeclaration-after-statement $(WERROR)
 #WARN=
 
 #
