@@ -1,4 +1,7 @@
 Release ...
+* troff: The ".tm" and ".write" requests now correctly handle locale-
+  dependent input characters as well as one-character escape sequences
+  that are interpreted in copy mode such as "\&".
 * [nt]roff: The "-msafe" macro now correctly removes the ".do pso",
   ".do open", and ".do opena" requests in -x1 (default) mode. They
   were previously removed in -x2 mode only.
